Home section with media query

--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Apensia">
     <meta name="description" content="HeyU Service Landing Page">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Welcome to HeyU!</title>
 </head>
 <body>
-    
+    <section class="home container">
+        <nav class="navbar">
+            <div class="logo">HeyU</div>
+            <div class="hamburger-menu"></div>
+            <ul class="menu">
+                <li><a href="#">about</a></li>
+                <li><a href="#">faq</a></li>
+                <li><a href="#">support</a></li>
+                <li><a href="#">blog</a></li>
+            </ul>
+        </nav>
+        <div class="home-wrapper">
+            <div class="home-content">
+                <div class="home-title">
+                    <h1>Simple, safe<br>& beautiful.</h1>
+                    <h2>With <strong>HeyU</strong>, you'll get fast, simple, secure messaging!</h2>
+                </div>
+                <div class="home-btn">
+                    <a href="#">Download now</a>
+                </div>
+            </div>
+            <div class="home-image">
+                <img src="assets/images/iphone7@2x.png" alt="phone">
+            </div>
+        </div>
+    </section>
+    <section class="message container">
+        <div class="message-wrapper"></div>
+    </section>
 </body>
 </html>
