Home section - mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <section class="home container">
         <nav class="navbar">
             <div class="logo">HeyU</div>
-            <div class="hamburger-menu"></div>
             <ul class="menu">
                 <li><a href="#">about</a></li>
                 <li><a href="#">faq</a></li>
@@ -26,17 +25,24 @@
                     <h1>Simple, safe<br>& beautiful.</h1>
                     <h2>With <strong>HeyU</strong>, you'll get fast, simple, secure messaging!</h2>
                 </div>
-                <div class="home-btn">
-                    <a href="#">Download now</a>
-                </div>
             </div>
             <div class="home-image">
-                <img src="assets/images/iphone7@2x.png" alt="phone">
-            </div>
+                <img src="assets/images/iphone7@2x.png" alt="">
+            </div>   
         </div>
     </section>
     <section class="message container">
-        <div class="message-wrapper"></div>
+        <div class="message-wrapper">
+            <img src="assets/images/messages@2x.png" alt="message" class="desc-image" id="msg1">
+            <img src="assets/images/conversation@2x.png" alt="conversation" class="desc-image" id="msg2">
+        </div>
+            <div class="message content">
+                <h1 class="section-title">Easy Messaging</h1>
+                <p class="section-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit corporis minima mollitia nostrum quas porro aperiam architecto delectus tempora ipsa.</p>
+            </div>
+        </div>
     </section>
+    <script src="assets/js/main.js"></script>
+    <script src="https://kit.fontawesome.com/00dde58123.js" crossorigin="anonymous"></script>
 </body>
 </html>
