Message section - mobile

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="assets/images/conversation@2x.png" alt="conversation" class="desc-image" id="msg2">
         </div>
             <div class="message content">
-                <h1 class="section-title">Easy Messaging</h1>
+                <h1 class="section-title">Easy Messaging<span>.</span></h1>
                 <p class="section-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit corporis minima mollitia nostrum quas porro aperiam architecto delectus tempora ipsa.</p>
             </div>
         </div>
