Mobile responsive editing

--- a/index.html
+++ b/index.html
@@ -33,15 +33,112 @@
     </section>
     <section class="message container">
         <div class="message-wrapper">
-            <img src="assets/images/messages@2x.png" alt="message" class="desc-image" id="msg1">
-            <img src="assets/images/conversation@2x.png" alt="conversation" class="desc-image" id="msg2">
-        </div>
-            <div class="message content">
+            <div class="message-wrapper__img">
+                <img src="assets/images/messages@2x.png" alt="message" class="desc-image" id="msg1">
+                <img src="assets/images/conversation@2x.png" alt="conversation" class="desc-image" id="msg2">
+            </div>
+            <div class="message-content">
                 <h1 class="section-title">Easy Messaging<span>.</span></h1>
                 <p class="section-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit corporis minima mollitia nostrum quas porro aperiam architecto delectus tempora ipsa.</p>
             </div>
         </div>
     </section>
+    <section class="touch container">
+        <div class="touch-wrapper">
+            <div class="touch-wrapper__img">
+                <img src="assets/images/groups@2x.png" alt="message" class="desc-image" id="msg1">
+                <img src="assets/images/contacts@2x.png" alt="conversation" class="desc-image" id="msg2">
+            </div>
+            <div class="touch-content">
+                <h1 class="section-title">Keep in touch<span>.</span></h1>
+                <p class="section-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit corporis minima mollitia nostrum quas porro aperiam architecto delectus tempora ipsa.</p>
+            </div>
+        </div>
+    </section>
+    <section class="review container">
+        <div class="review-wrapper">
+            <h1 class="section-title">What people say<span>.</span></h1>
+            <div class="speech">
+                <div class="speech-bubble" id="customer1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae molestias doloremque, aspernatur quisquam et perspiciatis minus error voluptates enim nemo praesentium aperiam neque pariatur possimus.</p>
+                    <h3>booking.com</h3>
+                </div>
+                <div class="speech-profile">
+                    <img src="assets/images/profile@2x.png" alt="profile">
+                    <div class="speech-profile__detail">
+                        <h1>John Doe</h1>
+                        <h2>CEO</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="speech">
+                <div class="speech-bubble" id="customer1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae molestias doloremque, aspernatur quisquam et perspiciatis minus error voluptates enim nemo praesentium aperiam neque pariatur possimus.</p>
+                    <h3>booking.com</h3>
+                </div>
+                <div class="speech-profile">
+                    <img src="assets/images/profile@2x.png" alt="profile">
+                    <div class="speech-profile__detail">
+                        <h1>John Doe</h1>
+                        <h2>CEO</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="speech">
+                <div class="speech-bubble" id="customer1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae molestias doloremque, aspernatur quisquam et perspiciatis minus error voluptates enim nemo praesentium aperiam neque pariatur possimus.</p>
+                    <h3>booking.com</h3>
+                </div>
+                <div class="speech-profile">
+                    <img src="assets/images/profile@2x.png" alt="profile">
+                    <div class="speech-profile__detail">
+                        <h1>John Doe</h1>
+                        <h2>CEO</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <section class="description container">
+        <div class="description-wrapper">
+            <img src="assets/images/login@2x.png" alt="login">
+            <div class="description-items">
+                <div class="description-item" id="id1">
+                    <img src="assets/images/object-bubble@2x.png" alt="bubble">
+                    <h1>Start conversation</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, fugiat.</p>
+                </div>
+                <div class="description-item" id="id1">
+                    <img src="assets/images/object-camera@2x.png" alt="bubble">
+                    <h1>Take a picture</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, fugiat.</p>
+                </div>
+                <div class="description-item" id="id1">
+                    <img src="assets/images/object-phone@2x.png" alt="bubble">
+                    <h1>Make a call</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, fugiat.</p>
+                </div>
+                <div class="description-item" id="id1">
+                    <img src="assets/images/object-camera@2x.png" alt="bubble">
+                    <h1>Send your video</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, fugiat.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="subscription container">
+        <h1 class="section-title">Subscribe to our newsletter<span>.</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <form action="">
+            <input type="text" placeholder="Your email address">
+            <a href="#">Subscribe</a>
+        </form> 
+    </section>   
+    <section class="download container">
+        <img src="assets/images/app-icon@2x.png" alt="appicon" class="appicon">
+        <h1 class="section-title">Download the app<span>.</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <img src="assets/images/appstore@2x.png" alt="appstore" class="applestore">
+    </section> 
     <script src="assets/js/main.js"></script>
     <script src="https://kit.fontawesome.com/00dde58123.js" crossorigin="anonymous"></script>
 </body>
